--- a/CSS/styles_informes.css
+++ b/CSS/styles_informes.css
@@ -1,7 +1,68 @@
-#mensaje_informes {
-  height: 100px;
+:root {
+  --bg-color: #ebd3f8;
+  --nav-bg-color: #ad49e1;
+  --text-color: #2e073f;
+  --title-text-color: #7a1cac;
 }
 
+/* Quitar padding al nav y cambiarle de color */
+#nav-grl-container,
+#nav-sub1-container,
+#nav-sub2-container {
+  background-color: var(--nav-bg-color);
+  padding: 0;
+}
+
+#container-content {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  padding: 92.75px 200px 92.75px 200px;
+  margin: 0px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+@media (max-width: 767.98px) {
+  #container-content {
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 25px;
+  }
+}
+/* Cambiar color de los títulos */
+#titulo-h1 {
+  color: var(--title-text-color);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+/* Cambiar color del párrafo principal */
+#intro-color {
+  background-color: var(--bg-color);
+  padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#content-rows {
+  background-color: var(--bg-color);
+  margin: 0px;
+}
+/* Justificar textos y cambiar color en parrafos */
 p {
-  text-align: justify;
+  color: var(--text-color);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+/* Primer párrafo quitar margen */
+#parrafo-uno {
+  margin: 0px;
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+/* Cambiar tamaño formulario y fuente */
+#mensaje_informes {
+  height: 88px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+/* Cambiar color footer */
+footer {
+  background-color: var(--nav-bg-color);
 }
