--- a/CSS/styles_visita.css
+++ b/CSS/styles_visita.css
@@ -4,11 +4,6 @@
   --text-color: #2e073f;
   --title-text-color: #7a1cac;
 }
-/* Cambiamos color flechas slider */
-.carousel-control-next,
-.carousel-control-prev /*, .carousel-indicators */ {
-  filter: invert(100%);
-}
 /* Quitar padding al nav y cambiarle de color */
 #nav-grl-container,
 #nav-sub1-container,
@@ -16,7 +11,6 @@
   background-color: var(--nav-bg-color);
   padding: 0;
 }
-
 /* Cambiar color de los títulos */
 #titulo-h1,
 #titulo-h2-uno,
@@ -42,22 +36,25 @@ p {
 #parrafo-uno {
   margin: 0px;
 }
+/* Ajustar tamaño imagenes */
+img {
+  width: 600px;
+  height: 400px;
+}
 /* Cambiar color al fondo del carrussel */
 #carousel-slide1,
 #carousel-slide2,
 #carousel-slide3 {
   background-color: var(--bg-color);
 }
-/* Ajustar tamaño imagenes */
-img {
-  width: 600px;
-  height: 400px;
+/* Cambiamos color chevrones sliders */
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
-/* Cambiar color footer */
-footer {
-  background-color: var(--nav-bg-color);
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
 }
-/* Cambiar tamaños item slides responsivos */
+/* Cambiar tamaños items slides responsivos */
 @media (width< 1324px) {
   #carousel-slide1,
   #carousel-slide2,
@@ -71,4 +68,8 @@ footer {
   #carousel-slide3 {
     height: 1020px;
   }
+}
+/* Cambiar color footer */
+footer {
+  background-color: var(--nav-bg-color);
 }
